# gfm2polygon-statement

./: .gitignore  CMakeLists.cmark-gfm.txt  CMakeLists.txt  COPYING  README.md  build.sh
src/: main.cpp  polygon.cpp  polygon.hpp
